# Vatsinator

./: .gitignore  CMakeLists.txt
cmake-modules/: VatsinatorInstall.cmake
resources/: CMakeLists.txt
source/: CMakeLists.txt  main.cpp  vatsinatorapplication.cpp  vatsinatorapplication.h
source/glutils/: glextensions.cpp  glextensions.h  glresourcemanager.cpp
source/modules/: airporttracker.cpp  modelmatcher.cpp  modelmatcher.h  vatbookhandler.cpp
source/network/: filedownloader.cpp  filedownloader.h  plaintextdownloader.cpp  plaintextdownloader.h  statspurveyor.cpp
source/plugins/: mapdrawer.h
source/plugins/vector-map/: CMakeLists.txt  vectormapdrawer.cpp  vectormapdrawer.h  worldmap.cpp  worldmap.h
source/storage/: cachefile.cpp  cachefile.h  filemanager.cpp  filemanager.h  settingsmanager.cpp  unzipper.cpp
source/ui/: CMakeLists.txt  quickuserinterface.cpp  quickuserinterface.h  vatsinatorstyle.h
source/ui/map/: airportitem.cpp  airportitem.h  approachcircleitem.cpp  approachcircleitem.h  firitem.cpp  flightitem.cpp  flightitem.h  mapconfig.cpp  mapconfig.h  maprenderer.cpp  maprenderer.h  mapscene.cpp  mapscene.h  modelmatcher.cpp  modelmatcher.h  worldpolygon.cpp
source/ui/qml/: AboutDialog.qml  MainMenu.qml  MapControls.qml  MapPage.qml  MenuDrawer.qml  MenuListDelegate.qml  MenuModel.qml  SwipeHandler.qml  about.qml  main.qml  qmls.qrc  vatsinator.qml
source/ui/quick/: map.cpp  map.h
source/ui/widgets/: mapwidget.cpp
source/ui/windows/: settingswindow.cpp
source/vatsimdata/: vatsimdatahandler.cpp
source/vatsimdata/models/: metarlistmodel.h
